# syncweaver

./: .gitattributes  .gitignore  .nojekyll  .pre-commit-config.yaml  .prettierrc  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.html  Dockerfile  LICENSE.html  README.md  README.qmd  VERSION  badges.html  cite.html  cli.html  contributors.html  help.html  index.html  install.html  main.py  pyproject.toml  robots.txt  search.json  sitemap.xml  syncweaver_functracer_reference_guide.html  usage.html
.github/: CONTRIBUTING.md  host-repositories.yml  plan.md
.github/workflows/: auto-format.yml  build-python.yml  docker.yml  docs-quartodoc.yml  draft-release.yml  post-release.yml  syncweaver-notify-host-update-source.yml  syncweaver-update-hosts.yml
actions/capsule-generate-patches/: action.yml
actions/capsule-mark-patch-rejected/: action.yml
actions/capsule-open-upstream-pr/: action.yml
actions/capsule-regenerate-dependencies/: action.yml
actions/setup-syncweaver/: action.yml
cli/: add.html  contribute.html  index.html  remove.html  update.html  validate.html
demo/: index.html
docs/: .gitignore  _cli-sidebar.yml  _quarto.yml  _sidebar.yml  badges.qmd  check_cli_docs.py  cite.qmd  cli.qmd  contributors.qmd  help.qmd  index.qmd  install.qmd  render_site.sh  syncweaver_functracer_reference_guide.md  usage.qmd
guide/: index.html
reference/: cli.add.html  cli.main.html  cli.patch.html  cli.templates.html  git.html  index.html  lockfile.html  patch.html  templates.html  util.html
tests/: __init__.py  test_add.py  test_bin_cli.py  test_cli.py  test_contribute_patch.py  test_dependency_analysis.py  test_git.py  test_host_registry.py  test_host_source_update.py  test_init_host.py  test_init_orchestrator.py  test_lockfile.py  test_patch.py  test_remove.py  test_templates.py  test_update.py  test_util.py  test_validate.py  test_workflow_contribute_patch.py  test_workflow_update_host_source_direct.py
(+89 files in other folders)
